# cvmixer

./: .gitignore  CMakeLists.txt  README.rst
cmake/: OpenCVConfig.cmake  OpenCVModules.cmake
cmp/resize/: Makefile  cmp.py
compare/resize/: resize.c  resize.py
cvc/: Makefile  normalize_rgb.c  operators.c
cvcpp/imgproc/: smoothing.cpp  smoothing_gpu.cpp
cvmixer/: CMakeLists.txt
cvmixer/core/: CMakeLists.txt
cvmixer/imgproc/: CMakeLists.txt  smoothing.cpp  smoothing_gpu.cpp
cvpy/: image_resizing.py  requirements.txt
requirements/: ubuntu.sh
